responsive website complete done

--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         </div>
 
         <main class="w-100 h-100 position-absolute d-flex justify-content-center align-items-center">
-            <div class="banner-content w-50 text-light text-center mt-5 pt-5">
-                <h1 class="tittle">The Perfect venu of your <br> next event</h1>
-                <p class="pragraph">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam a ab deleniti nesciunt aliquam laudantium odio distinctio nemo facilis quibusdam suscipit modi explicabo, obcaecati assumenda. Voluptates dolorum cumque ipsam earum!</p>
+            <div class="banner-content w-50 text-light text-center mt-sm-0 pt-sm-0 mt-md-5 pt-md-5">
+                <h2 class="tittle">The Perfect venu of your <br> next event</h2>
+                <p class="pragraph d-none d-md-block d-sm-none">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam a ab deleniti nesciunt aliquam laudantium odio distinctio nemo facilis quibusdam suscipit modi explicabo, obcaecati assumenda. Voluptates dolorum cumque ipsam earum!</p>
                 <a class="btn btn-light" href="#">Book Now</a>
             </div>
         </main>
@@ -105,24 +105,230 @@
         <h1>Everymoment is Precious</h1>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum est ad doloremque quos! Laboriosam, adipisci nihil. Eos cumque officiis praesentium.</p>
         <a href="#" class="btn btn-outline-primary rounded-0 px-3 py-2">Explore our album <i class="fa-solid fa-arrow-right-long"></i></a>
-        
-        </col>
+        </div>
     </div>
   </div>
 
 
+  <!-- our package section start -->
+
+  <div class="container my-5">
+    <div class="row">
+      <h1 class="tittle text-center my-5 py-5">Our Package</h1>
+      <div class="col-12 col-sm-6 col-md-3 package-hover">
+
+        <div class="card text-start px-2 py-4">
+          <div class="card-body">
+            <h2 class="card-tittle">$300</h2>
+            <h4 class="card-title">Business fair</h4>
+            <p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, nihil?</p>
+              <ul>
+                <li>Limited space process</li>
+                <li>secuirty facility</li>
+                <li>even support</li>
+                <li>Decoration design</li>
+                <li>per day bill</li>
+              </ul>
+              <button class="btn rounded-3 w-100">Chosse plan</button>
+            </p>
+          </div>
+        </div>
+
+      </div>
+      <div class="col-12 col-sm-6 col-md-3 package-hover">
+
+        <div class="card text-start px-2 py-4">
+          <div class="card-body">
+            <h2 class="card-tittle">$300</h2>
+            <h4 class="card-title">Business fair</h4>
+            <p class="card-text">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, nihil?</p>
+              <ul>
+                <li>Limited space process</li>
+                <li>secuirty facility</li>
+                <li>even support</li>
+                <li>Decoration design</li>
+                <li>per day bill</li>
+              </ul>
+              <button class="btn btn-danger rounded-3 w-100">Chosse plan</button>
+            </p>
+          </div>
+        </div>
+
+      </div>
+      <div class="col-12 col-sm-6 col-md-3 package-hover">
+
+        <div class="card text-start px-2 py-4">
+          <div class="card-body">
+            <h2 class="card-tittle">$300</h2>
+            <h4 class="card-title">Business fair</h4>
+            <p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, nihil?</p>
+              <ul>
+                <li>Limited space process</li>
+                <li>secuirty facility</li>
+                <li>even support</li>
+                <li>Decoration design</li>
+                <li>per day bill</li>
+              </ul>
+              <button class="btn btn-danger rounded-3 w-100">Chosse plan</button>
+            </p>
+          </div>
+        </div>
+
+      </div>
+      <div class="col-12 col-sm-6 col-md-3 package-hover">
+
+        <div class="card text-start py-4 px-2">
+          <div class="card-body">
+            <h2 class="card-tittle">$300</h2>
+            <h4 class="card-title">Business fair</h4>
+            <p class="card-text ">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, nihil?</p>
+              <ul>
+                <li>Limited space process</li>
+                <li>secuirty facility</li>
+                <li>even support</li>
+                <li>Decoration design</li>
+                <li>per day bill</li>
+              </ul>
+              <button class="btn btn-danger rounded-3 w-100">Chosse plan</button>
+            </p>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
 
 
+  <!-- Happy client section start -->
+
+ <div class="container">
+    <h1 class="text-center">Happy client says</h1>
+
+        <div class="persons m-5 d-flex justify-content-between flex-sm-column flex-lg-row flex-column">
+
+          <div class="person shadow text-center p-5">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, sequi dolore. Tempora fugit autem itaque consequuntur at quidem explicabo dicta?</p>
+            <img class="img-fluid" src="images/person 1.png" alt="">
+            <h4 class="mt-2">Regina Miles</h4>
+            <h6>Banker</h6>
+          </div>
+          <div class="person shadow text-center p-5">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, sequi dolore. Tempora fugit autem itaque consequuntur at quidem explicabo dicta?</p>
+            <img class="img-fluid" src="images/person 2.png" alt="">
+            <h4 class="mt-2">Regina Miles</h4>
+            <h6>Banker</h6>
+          </div>
+          <div class="person shadow text-center p-5">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, sequi dolore. Tempora fugit autem itaque consequuntur at quidem explicabo dicta?</p>
+            <img class="img-fluid" src="images/person 3.png" alt="">
+            <h4 class="mt-2">Regina Miles</h4>
+            <h6>Banker</h6>
+          </div>
+  
+  
+        </div>
+ </div>
 
 
+ <!-- Asked question section start -->
+
+ <h1 class="text-center mt-5 pt-5">Frequently Asked Question</h1>
+
+ <div class="container asked-question d-flex justify-content-between my-5 py-5 align-items-center flex-column-reverse flex-sm-column-reverse flex-lg-row">
+  <div class="question w-100">
 
 
+    <div class="accordion" id="accordionExample">
+      <div class="accordion-item my-2">
+        <h2 class="accordion-header border" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                What's the difference between event design and
+                event planning?
+          </button>
+        </h2>
 
- 
+
+        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            Event design and event planning work hand in hand to deliver a
+            successful event.Events by Knight offer tailor made events. This
+            means we incorporate both event design and event planning to
+            create that perfect event.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item border my-2">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapsetwo" aria-expanded="true" aria-controls="collapsetwo">
+                What's the difference between event design and
+                event planning?
+          </button>
+        </h2>
 
 
+        <div id="collapsetwo" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            Event design and event planning work hand in hand to deliver a
+            successful event.Events by Knight offer tailor made events. This
+            means we incorporate both event design and event planning to
+            create that perfect event.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item border my-2">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button text-dark" type="button" data-bs-toggle="collapse" data-bs-target="#collapsethree" aria-expanded="true" aria-controls="collapsethree">
+                What's the difference between event design and
+                event planning?
+          </button>
+        </h2>
 
 
+        <div id="collapsethree" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            Event design and event planning work hand in hand to deliver a
+            successful event.Events by Knight offer tailor made events. This
+            means we incorporate both event design and event planning to
+            create that perfect event.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item border my-2">
+        <h2 class="accordion-header" id="headingOne">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefour" aria-expanded="true" aria-controls="collapsefour">
+                What's the difference between event design and
+                event planning?
+          </button>
+        </h2>
+
+
+        <div id="collapsefour" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            Event design and event planning work hand in hand to deliver a
+            successful event.Events by Knight offer tailor made events. This
+            means we incorporate both event design and event planning to
+            create that perfect event.
+          </div>
+        </div>
+      </div>
+      
+    </div>
+
+
+  </div>
+  <img class="img-fluid" src="images/people.png" alt="">
+ </div>
+
+
+ <!-- footer section start -->
+
+ <div class="container-fluid bg-dark footer">
+  <h6 class="text-light">@2023 bike. All Right Reserved</h6>
+ </div>
 
 
 
