--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
 
   </div>
-  <img class="img-fluid" src="images/people.png" alt="">
+  <img class="img-fluid" src="images/questions.jpg" alt="">
  </div>
 
 
